timout logout implemented, reorganised files, mark as arrived implemented.

--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,29 @@ footer p{
     display: flex;
     justify-content: flex-end;
 }
+
+table{
+    width: 100%;
+    margin: 20px;
+    font-size: 16px;
+    text-align: center;
+}
+
+th, td{
+    padding: 12px 15px;
+    border: 1px solid #3C3D37;
+}
+
+th{
+    background-color: #7c4149;
+    color:#561C24;
+    font-weight: bold;
+}
+
+tr:nth-child(even){
+    background-color: #a7835b;
+}
+
+tr:hover{
+    background-color: aqua;
+}
