--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ footer p{
 
 table{
     width: 100%;
-    margin: 20px;
     font-size: 16px;
     text-align: center;
 }
@@ -94,15 +93,15 @@ th, td{
 }
 
 th{
-    background-color: #7c4149;
-    color:#561C24;
+    background-color: #561C24;
+    color:#ecdcc4;
     font-weight: bold;
 }
 
 tr:nth-child(even){
-    background-color: #a7835b;
+    background-color: #c3b3a4;
 }
 
 tr:hover{
-    background-color: aqua;
+    background-color: #a48484;
 }
