added comments to all files

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Stlying for navigation bar */
 nav ul{
     list-style-type: none;
     margin: 0;
@@ -34,11 +35,17 @@ nav li a:hover:not(.activePage){
     background-color: #7c4149;
 }
 
+
+
+/* Stlying for image */
 img{
     height: 300px;
     width: 500px;
 }
 
+
+
+/* Styling for body */
 body{
     font-family: Garamond, Serif;
     background-color: #E8D8C4;
@@ -59,6 +66,9 @@ a{
     color: #a7835b;
 }
 
+
+
+/* Styling for footer */
 footer{
     display: flex;
     justify-content: space-between;
@@ -81,6 +91,9 @@ footer p{
     justify-content: flex-end;
 }
 
+
+
+/* Styling for table */
 table{
     width: 100%;
     font-size: 16px;
